# jni-sample

./: README.md
android-demo/app/: .gitignore  build.gradle
android-demo/app/src/main/: AndroidManifest.xml
android-demo/app/src/main/java/jp/keita/kagurazaka/jni/demo/: MainActivity.java
android-demo/app/src/main/res/layout/: activity_main.xml
cpp-library/: CMakeLists.txt  SomeNativeClass.cpp  SomeNativeClass.hpp  cpp-library.sln  cpp-library.vcxproj  cpp-library.vcxproj.filters
jni-wrapper/: .gitignore  gradle.properties  settings.gradle
jni-wrapper/gen-libs/: CMakeLists.txt  build.gradle
jni-wrapper/gen-libs/src/main/: AndroidManifest.xml
jni-wrapper/gen-libs/src/main/cpp/: .gitignore  jp_keita_kagurazaka_jnisample_SomeNativeClassWrapper.cpp  jp_keita_kagurazaka_jnisample_SomeNativeClassWrapper.h  native-lib.sln  native-lib.vcxproj  native-lib.vcxproj.filters
jni-wrapper/gen-libs/src/main/cpp/helper/: JavaByteArray.cpp  JavaByteArray.hpp  JavaString.cpp  JavaString.hpp
jni-wrapper/java-lib/: build.gradle
jni-wrapper/java-lib/src/main/java/jp/keita/kagurazaka/jnisample/: NativeException.java  SomeNativeClassWrapper.java
spring-demo/: build.gradle
spring-demo/gradle/wrapper/: gradle-wrapper.properties
spring-demo/src/main/kotlin/jp/keita/kagurazaka/spring/demo/: Application.kt  DemoController.kt
